@startuml

class Hero {
  - hp
  + encountMonster()
  + getHp()
  + setHp()
}

class Wizard {
  + update()
}

abstract class Subject {
  - observerList
  + addObserver()
  + notifyObserver()
}

interface Observer {
  + update()
}

class Main {
}

Observer <|-- Wizard
Subject <|-- Hero
Observer -* Subject

Wizard -- Main : new
Hero -- Main : new

@enduml
